@@ -1,5 +1,5 @@
 <div class="status content">
-	<div class="statusmessage"><nobr>%message%</nobr></div>
 	<div class="statustime">%time%</div>
+	<div class="statusmessage">%message%</div>
 </div>
 <div class="spacer"></div>
