@@ -6,6 +6,7 @@
 * history: #2527 fixed: sort messages in history correctly (ultr)
 * sms: fixed gateway code (Vogel)
 * history: #2517 fixed: statuses were always stored as Offline (Vogel)
+* chat styles: #2518 fixed: text in system messages was overflowing time (Vogel)
 
 +++ version 0.11.1
 * gui: #2464 fixed: Clear Chat button was not properly activated after reading messages from history (Vogel)
